k8s/mysql-clusterIp-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mysql-lab
